force-app/main/default/objects/ContactPointAddress/fields/EMail__c.field-meta.xml
<CustomField>
    <fullName>EMail__c</fullName>
    <label>E-Mail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>