force-app/main/default/objects/ContactPointAddress/fields/NB2B_thirdpartyAddress__c.field-meta.xml
<CustomField>
    <fullName>NB2B_thirdpartyAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Charges Apply</label>
    <type>Checkbox</type>
</CustomField>