force-app/main/default/objects/ContactPointAddress/fields/NBK_Store__c.field-meta.xml
<CustomField>
    <fullName>NBK_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store</label>
    <type>Checkbox</type>
</CustomField>