force-app/main/default/objects/ContactPointAddress/fields/SAPId__c.field-meta.xml
<CustomField>
    <fullName>SAPId__c</fullName>
    <description>Id of the address in SAP</description>
    <label>SAP Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>