force-app/main/default/objects/ContactPointAddress/recordTypes/Account_Address.recordType-meta.xml
<RecordType>
    <fullName>Account_Address</fullName>
    <active>true</active>
    <description>Record type for account shipping and billing addresses</description>
    <label>Account Address</label>
</RecordType>